# gmail-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
config/: example.accounts.json
src/gmail_mcp/: __init__.py  __main__.py  access_control.py  auth.py  gmail_client.py  security.py  server.py  tools.py
tests/: conftest.py  test_access_control.py  test_auth.py  test_gmail_client.py  test_security.py  test_server.py
